--- a/Main 1.Rmd
+++ b/Main 1.Rmd
@@ -39,6 +39,11 @@ animal_details = read.csv("animal_details.csv")
 animal_details$Mouse.ID. = as.factor(animal_details$ID)
 raw = merge(animal_details, raw, by = "Mouse.ID.")
 
+# change everything else to numeric
+for (i in c(15:29, 33:53)) {
+  raw[,i] = as.numeric(as.character(raw[,i]))
+}
+
 # Convert time (hh:mm) to minutes 
 raw$DELTA.T = sapply(strsplit(as.character(raw$DELTA.T), ":"), function(x)
 {
@@ -46,8 +51,6 @@ raw$DELTA.T = sapply(strsplit(as.character(raw$DELTA.T), ":"), function(x)
   x[1] * 60 + x[2]
 }
 )
-
-
 
 # show the number of different values per ROI variables
 factor(levels(raw$System.)) # 17
@@ -72,10 +75,10 @@ nrow(raw)
 root_pat = "^[:digit:]{1,3}_[:digit:]{1,3}_[-]?.{1,3}_[:xdigit:]{1,4}_"
 
 # Load in the image metadata and clean it
-
-
 exfiles = list.files(path = "All AGE 10 series counts-03232018/Rotations or Exclusions - From Manual Validations", full.names = TRUE)
 ex = do.call("rbind", lapply(exfiles, FUN = function(file) read.csv(file, header = TRUE, sep = ",")))
+
+
 
 
 # Clean the 'ex' dataframe
@@ -173,16 +176,16 @@ heat_set = function(ch, x1, y1) {
         print(
             ggplot(
                 raw, aes(y = y1, x = x1)) + geom_tile(aes(fill = counts)) +
-                labs(title = title) +rx
+                labs(title = title) +rx + facet_wrap(~raw$EXPT)
             )
     }
 }
 
-heat_set(channels_mean, raw$Mouse.ID., raw$System.)
-heat_set(channels_hiSD, raw$Mouse.ID., raw$System.)
-heat_set(channels_lowSD, raw$Mouse.ID., raw$System.)
-heat_set(channels_midSD, raw$Mouse.ID., raw$System.)
-heat_set(channels_total, raw$Mouse.ID., raw$System.)
+heat_set(channels_mean, raw$GROUP, raw$System.)
+heat_set(channels_hiSD, raw$GROUP, raw$System.)
+heat_set(channels_lowSD, raw$GROUP, raw$System.)
+heat_set(channels_midSD, raw$GROUP, raw$System.)
+heat_set(channels_total, raw$GROUP, raw$System.)
 
 # Determine whether each hemisphere is represented
 
@@ -191,11 +194,12 @@ heat_set(channels_total, raw$Mouse.ID., raw$System.)
 # Try to do a whole brain analysis
 
 ```{r}
-ggplot(raw, aes(GROUP, Ch4.Mean.)) + geom_jitter()
 
-
-ggplot(raw, aes(GROUP, OL.Total.)) + geom_col()
-ggplot(raw, aes(GROUP, Ch1.Mean.)) + geom_col()
+ggplot(raw, aes(GROUP, OL.Total.)) + geom_col() + facet_wrap(~raw$EXPT)
+ggplot(raw, aes(GROUP, Ch1.Mean.)) + geom_col() + facet_wrap(~raw$EXPT)
+ggplot(raw, aes(GROUP, Ch2.Mean.)) + geom_col() + facet_wrap(~raw$EXPT)
+ggplot(raw, aes(GROUP, Ch3.Mean.)) + geom_col() + facet_wrap(~raw$EXPT)
+ggplot(raw, aes(GROUP, Ch4.Mean.)) + geom_col() + facet_wrap(~raw$EXPT)
 
 ```
 
