--- a/Main 2.Rmd
+++ b/Main 2.Rmd
@@ -129,3 +129,24 @@ for (i in channels.all) {
 
 ```
 
+
+# Now let's separate them by ROIs
+I'm not sure whether these error bars are correct... Are the SEMs factored out or not? How can these error bars be so small?
+```{r}
+
+# Make list of interesting ROIs
+interesting.ROI = c("AcB", "CA1", "CA3", "CeA", "DG", "ENT","PAG", "PrL", "RSCla", "LA", "LAT")
+
+# Make pointrange graphs 
+
+ggplot(rawkk[rawkk$SUBROI %in% interesting.ROI,]) +
+  aes(GROUP, OLmm2.norm, fill=EXPT, shape=EXPT, color=EXPT) +
+  stat_summary(fun.y = mean, 
+               geom="point") +
+  stat_summary(fun.data=mean_se, 
+               geom="pointrange") +
+  facet_wrap(~SUBROI) +geom_point(color="black")
+
+
+
+```
