Renamed the channels

--- a/Main 2.Rmd
+++ b/Main 2.Rmd
@@ -54,17 +54,31 @@ kk = merge(animal_details, kk, by = "idBysubroi")
 colnames(kk)[2] = "GROUP"
 
 
-# Merge gruop details
+# Merge group details
 group_details = read.csv("group_details.csv")
 names(group_details)[1] = "GROUP"
 kk = merge(group_details, kk, by="GROUP")
 
-attach(kk)
+replace = read.csv("replacements.csv")
+names(replace) = c("pre", "post")
+
+# Rename the age groups
+kk$EXPT = as.factor(as.character(replace$post[match(kk$EXPT, replace$pre)]))
+
+
+
+
+
 
 # normalize the OL counts
 kk$OLmm2.norm = kk$OLmm2
 kk$OLmm2.norm = kk$OLmm2/(kk$Ch2mm2 + kk$Ch4mm2 - kk$OLmm2)
 
+# Rename the channels
+names(kk)[15:20] = as.character(replace[1:6,2])
+
+
+attach(kk)
 
 # Transform rawkk to a long format
 kk.long = melt(kk, id.vars=names(kk[1:14]), variable.name = "CHANNEL", value.name="DENSITY")
